--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
   },
   "description": ""
 }
