--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.ts"
+    "build" : "tsc",
+    "dev": "nodemon server.ts",
+    "start": "node build/server.js"
   },
   "author": "",
   "license": "ISC",
